--- a/src/components/CourseMeta/CourseDetails/styles.module.css
+++ b/src/components/CourseMeta/CourseDetails/styles.module.css
@@ -12,6 +12,8 @@
 
 .courseDetail span {
   font-weight: bold;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 .courseDetail {
